# am

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
alias_matching/: __init__.py  matching.py
alias_matching/matching/: __init__.py  matching.py  utils.py
alias_matching/utils/: utils.py
aliasmatching/: __init__.py  matching.py
aliasmatching/matching/: __init__.py  matching.py
aliasmatching/utils/: __init__.py  utils.py
am/: __init__.py
am/matching/: __init__.py  matching.py
docs/: Makefile  alias.rst  conf.py  index.rst  make.bat  overview.rst  utils.rst
docs/source/: conf.py
