[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aliasmatching"
version = "1.0.0"
authors = [
  { name="Farid", email="kraalfar@gmail.com" },
]
description = "alias matching toolkit"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JetBrains-Research/am"
#"Bug Tracker" = "https://github.com/JetBrains-Research/batcore/issues"
"Docs" = "https://batcore.readthedocs.io/en/latest/index.html#"